--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "url": "git+https://github.com/amywolgemuth/liri-node-app.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Amy Wolgemuth",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/amywolgemuth/liri-node-app/issues"
   },
-  "homepage": "https://github.com/amywolgemuth/liri-node-app#readme"
+  "homepage": "https://github.com/amywolgemuth/liri-node-app#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
+    "moment": "^2.24.0",
+    "node-spotify-api": "^1.1.1"
+  }
 }
